<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutAnimation="@transition/anim_setting_left"
    tools:context=".MainActivity"
    style="@style/back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avt"
            android:textColor="#765EFB"
            android:textSize="24sp"
            android:layout_marginTop="150dp"
            />

        <TextView
            android:id="@+id/textView2"
            android:text="@string/avlog"
            style="@style/StyleText"/>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:inputType="textPersonName"
            style="@style/MyStyle"
            />

        <TextView
            android:id="@+id/textView3"
            android:text="@string/avpass"
            style="@style/StyleText"/>

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:inputType="textPersonName"
            style="@style/MyStyle"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="50dp"

            android:text="@string/butav"
            style="@style/StyleButton"
            android:layout_marginTop="50dp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zab"
            android:textColor="#FFFFFF"
            android:layout_marginTop="15dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>