<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/back"
    android:layoutAnimation="@transition/anim_setting_right"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:textColor="#765EFB"
            android:textSize="24sp"
            android:layout_marginTop="130dp"/>

        <TextView
            android:id="@+id/textView2"
            android:text="@string/log"
            style="@style/StyleText"
            />

        <EditText
            android:id="@+id/editTextTextPersonName"
            style="@style/MyStyle"
            android:background="@drawable/radius_button"
            android:inputType="textPersonName"

            />

        <TextView
            android:id="@+id/textView3"
            android:text="@string/pass"
            style="@style/StyleText"
            />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:inputType="textPersonName"
            style="@style/MyStyle"
            />

        <TextView
            android:id="@+id/textView5"
            android:text="@string/reppass"
            style="@style/StyleText"/>


        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:inputType="textPersonName"
            style="@style/MyStyle"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/but"
            style="@style/StyleButton"
            android:layout_marginTop="50dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

